--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@types/node": "^16.18.65",
     "@types/react": "^18.2.39",
     "@types/react-dom": "^18.2.17",
+    "antd": "^5.11.5",
     "graphql": "^16.8.1",
     "install": "^0.13.0",
     "npm": "^10.2.4",
