--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@types/react-dom": "^18.2.17",
     "@types/react-router-dom": "^5.3.3",
     "antd": "^5.11.5",
+    "apollo-link-context": "^1.0.20",
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
     "install": "^0.13.0",
